--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,15 @@ services:
       - .env
     ports:
       - "127.0.0.1:8000:8000"
+    environment:
+      - DOCKER_CONTAINER=true
     depends_on:
       - db
 
   db:
     image: postgres:15
+    ports:
+      - "5432:5432"
     container_name: myapp_db
     restart: always
     env_file:
